@@ -8625,6 +8625,9 @@ but for a $1$ at position $i$.
 \fun{int}{RgM_is_ZM}{GEN x} return 1 if the \typ{MAT}~$x$ has only
 \typ{INT} coefficients, and 0 otherwise.
 
+\fun{long}{qfiseven}{GEN M} return 1 if the square symetric typ{ZM}~$x$
+is an even quadratic form (all diagonal coefficients are even), and 0 otherwise.
+
 \fun{int}{RgM_is_QM}{GEN x} return 1 if the \typ{MAT}~$x$ has only
 \typ{INT} or \typ{FRAC} coefficients, and 0 otherwise.
 
