@@ -3938,7 +3938,7 @@ GEN     lfunmul(GEN ldata1, GEN ldata2, long bitprec);
 GEN     lfunqf(GEN ldata, long prec);
 GEN     lfunsympow(GEN E, ulong m);
 GEN     lfunzetakinit(GEN pol, GEN dom, long der, long flag, long bitprec);
-long    qf_iseven(GEN M);
+long    qfiseven(GEN M);
 
 /* lll.c */
 
